--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.html",
+        "src": "public/**/*",
         "use": "@vercel/static"
       },
       {
@@ -17,7 +17,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/index.html"
+        "dest": "/public/$1"
       }
     ]
   }
