--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,30 @@
       {
         "src": "public/**/*",
         "use": "@vercel/static"
-      },
+      },{
+        "version": 2,
+        "builds": [
+          {
+            "src": "public/**/*",
+            "use": "@vercel/static"
+          },
+          {
+            "src": "api/**/*.js",
+            "use": "@vercel/node"
+          }
+        ],
+        "routes": [
+          {
+            "src": "/api/(.*)",
+            "dest": "/api/$1"
+          },
+          {
+            "src": "/(.*)",
+            "dest": "/public/$1"
+          }
+        ]
+      }
+      
       {
         "src": "api/**/*.js",
         "use": "@vercel/node"
