Update Vercel configuration to handle routes and static files

--- a/vercel.json
+++ b/vercel.json
@@ -1,47 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "public/**/*",
-        "use": "@vercel/static"
-      },{
-        "version": 2,
-        "builds": [
-          {
-            "src": "public/**/*",
-            "use": "@vercel/static"
-          },
-          {
-            "src": "api/**/*.js",
-            "use": "@vercel/node"
-          }
-        ],
-        "routes": [
-          {
-            "src": "/api/(.*)",
-            "dest": "/api/$1"
-          },
-          {
-            "src": "/(.*)",
-            "dest": "/public/$1"
-          }
-        ]
-      }
-      
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/public/$1"
-      }
-    ]
-  }
-  
+{"REWRITE":[{"SOURCE":"/(.*)","DESTINATION":"/"}]}
