Update Vercel configuration to handle routes and static files

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
-{"REWRITE":[{"SOURCE":"/(.*)","DESTINATION":"/"}]}
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "app.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "app.py"
+      }
+    ]
+  }
