--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,13 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "public/**/*",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/public/$1"
-      }
-    ]
+export const runtime = 'edge';
+ 
+export async function GET(request: Request) {
+  const currentDate = () => new Date().toISOString();
+  for (let i = 0; i < 500; i++) {
+    console.log(`Current Date before fetch: ${currentDate()}`); // Prints the same value 1000 times.
   }
-  
+ 
+  await fetch('https://worldtimeapi.org/api/timezone/Etc/UTC');
+  console.log(`Current Date after fetch: ${currentDate()}`); // Prints the new time
+ 
+  return Response.json({ date: currentDate() });
+}
