--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,18 @@
+
 {
-  "version":2,
+  "version": 2,
   "builds": [
-    { "src": "*.js", "use": "@vercel/node" }
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
 }
+
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
