--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "version": 2,
   "builds": [
@@ -12,7 +11,11 @@
       "src": "/(.*)",
       "dest": "/public/$1"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
-
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
